Added basic search functionality

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -9,7 +9,7 @@
 
     <div class="wrapper">
       <div class="container">
-        <div role="main">
+        <div id="main" role="main">
           <h1>{{ .Title }}</h1>
           <ul id="article-list">
             {{range .Paginator.Pages}}
