--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,7 @@
 
     <div class="wrapper">
       <div class="container">
-        <div role="main">
+        <div id="main" role="main">
           <article role="article" itemscope itemtype="http://schema.org/Article">
             <h1 itemprop="name">{{ .Title }}</h1>
             {{ partial "article.html" . }}
