--- a/layouts/partials/complementary.html
+++ b/layouts/partials/complementary.html
@@ -17,5 +17,5 @@
   </ul>
 </div>
 
-<script src="/js/lunr.js" async></script>
-<script src="/js/lunr-init.js" async></script>
+<script src="/js/lunr.js?{{now.Unix}}" async></script>
+<script src="/js/lunr-init.js?{{now.Unix}}" async></script>
