Show the date when the comment was published as well

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -41,6 +41,7 @@
                         </span>
                         <span class="comment-anchor" itemprop="url"><a href="#{{.Params.anchor}}" id="{{.Params.anchor}}">#</a></span>
                       </h4>
+                      <p class="footnote"><time datetime="{{.PublishDate.UTC.Format "2006-01-02T15:04:05Z"}}" itemprop="datePublished">{{.PublishDate.UTC.Format "2006-01-02 15:04"}}</time></p>
                       <div itemprop="commentText">
                         {{ .Content }}
                       </div>
