Slightly improved styling of comment replies

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1535,7 +1535,8 @@ td {
 /* Custom styles */
 .comment_reply {
   background-color: #FFE0E0;
-  padding: 10px;
+  padding: 1px 10px;
+  margin: 10px 0;
 }
 .comment_reply_header {
   font-weight: bold;
