Override summary in project listing

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -18,7 +18,11 @@
                   <a href="{{.RelPermalink}}" itemprop="url">{{.Title}}</a>
                 </h4>
                 <div itemprop="description">
-                  {{ safeHTML .Summary }}
+                  {{ with .Params.summary }}
+                    {{ safeHTML . }}
+                  {{ else }}
+                    {{ safeHTML .Summary }}
+                  {{ end }}
                 </div>
                 {{ if .Truncated }}
                   <div>
