Submit article directory with the comment rather than its less meaningful permalink

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -100,7 +100,7 @@
                   <input name="submit" class="button" type="submit" value="Submit">
                 </p>
 
-                <input name="article" type="hidden" value="{{ .RelPermalink }}">
+                <input name="article" type="hidden" value="{{ .Dir }}">
               </div>
             </form>
           </section>
