Fixed unclosed tag

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -90,7 +90,7 @@
 
                   <p class="small">
                     <label for="message">Message <b class="required" title="Required">*</b></label>
-                    <span class="footnote">You can use <a rel="nofollow" href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a> here.<br>
+                    <span class="footnote">You can use <a rel="nofollow" href="https://www.markdownguide.org/basic-syntax/">Markdown syntax</a> here.</span><br>
                     <textarea id="message" name="message" cols="64" rows="8" required="required"></textarea>
                   </p>
                 </fieldset>
