More obvious placeholder for the "Website" field in the comment form

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -85,7 +85,7 @@
 
                   <p class="large">
                     <label for="web">Website</label><br>
-                    <input name="web" autocomplete="url" placeholder="http(s)://" class="comment_web_input" id="web" type="url" size="32" value="">
+                    <input name="web" autocomplete="url" placeholder="https://" class="comment_web_input" id="web" type="url" size="32" value="">
                   </p>
 
                   <p class="small">
