Minor improvements to the comments form

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -66,7 +66,7 @@
           <section id="comments-form">
             <h3>Comment</h3>
 
-            <form method="post" action="/commentmanagement">
+            <form method="post" action="/comment/submit">
               <div class="comments-wrapper">
                 <p id="Comment">
                   <strong>Enter your comment below.</strong>
@@ -97,7 +97,7 @@
 
                 <p>
                   <small>By submitting your comment, you agree to your comment being published here under the terms of the <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</small><br>
-                  <input name="submit" class="button" type="submit" value="Submit">
+                  <input class="button" type="submit" value="Submit">
                 </p>
 
                 <input name="article" type="hidden" value="{{ .Dir }}">
