--- a/layouts/partials/article.html
+++ b/layouts/partials/article.html
@@ -20,7 +20,7 @@
     {{ end }}
 
     {{ if eq $kind "home" }}
-      <span class="comments_invite"><a href="{{.RelPermalink}}#Comment">Comment</a> [{{ len (.Resources.Match "comment_*") }}]</span>
+      <span class="comments_invite"><a href="{{.RelPermalink}}#Comment">Comment</a> [{{ len (.Resources.Match "comment_[0-9][0-9][0-9][0-9][0-9][0-9].*") }}]</span>
     {{ end }}
    </p>
 {{ end }}
