--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -5,7 +5,7 @@
   </hgroup>
 </header>
 
-<nav role="navigation">
+<nav id="navigation" role="navigation">
   <h1>Navigation</h1>
   <ul class="section_list" role="menubar">
     {{range .Site.Menus.main}}
