Unified presentation in all article listings

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -14,24 +14,10 @@
           <ul id="article-list">
             {{range .Paginator.Pages}}
               <li role="article" itemscope itemtype="http://schema.org/Article">
-                <h4 itemprop="name">
+                <h1 itemprop="name">
                   <a href="{{.RelPermalink}}" itemprop="url">{{.Title}}</a>
-                </h4>
-                <div itemprop="description">
-                  {{ with .Params.summary }}
-                    {{ safeHTML . }}
-                  {{ else }}
-                    {{ safeHTML .Summary }}
-                  {{ end }}
-                </div>
-                {{ if .Truncated }}
-                  <div>
-                    <a href="{{ .RelPermalink }}">Read More…</a>
-                  </div>
-                {{ end }}
-                <p class="footnote">
-                  Posted on <time datetime="{{.PublishDate.UTC.Format "2006-01-02T15:04:05Z"}}" itemprop="datePublished">{{.PublishDate.UTC.Format "2006-01-02 15:04"}}</time> by <span itemprop="author"><a rel="author" href="/about/">{{ .Site.Author.name }}</a></span>
-                </p>
+                </h1>
+                {{ partial "article.html" (dict "scope" . "kind" "home") }}
               </li>
             {{end}}
           </ul>
