--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -228,11 +228,8 @@ header {
 
 header h1 {
   margin: 0;
-}
-
-header h3 {
-  /* 14px margin top */
-  margin: .66666666666667em 0 0;
+  font-size: 4em;
+  text-shadow: rgba(0, 0, 0, 0.55) 0px 1px 3px;
 }
 
 #navigation {
