Added link to non-technical Mastodon account

--- a/layouts/partials/complementary.html
+++ b/layouts/partials/complementary.html
@@ -12,6 +12,7 @@
   <ul class="linklist" style="list-style: none;">
     <li><a rel="me" href="https://twitter.com/WPalant"><img src="{{ .Scratch.Get "svg" }}#twitter" alt="" style="width: 16px; height: 16px;"> Twitter</a></li>
     <li><a rel="me" href="https://infosec.exchange/@WPalant"><img src="{{ .Scratch.Get "svg" }}#mastodon" alt="" style="width: 16px; height: 16px;"> Mastodon</a></li>
+    <li><a rel="me" href="https://social.tchncs.de/@WPalant"><img src="{{ .Scratch.Get "svg" }}#mastodon" alt="" style="width: 16px; height: 16px;"> Mastodon (non-technical)</a></li>
     <li><a rel="external" href="https://pfp.works/"><img src="{{ .Scratch.Get "svg" }}#pfp" alt="" style="width: 16px; height: 16px;"> PfP: Pain-free Passwords project</a></li>
     <li><a rel="external" href="https://adblockplus.org/"><img src="{{ .Scratch.Get "svg" }}#abp" alt="" style="width: 16px; height: 16px;"> Adblock Plus project</a></li>
     <li><a rel="external" href="https://github.com/palant?tab=repositories"><img src="{{ .Scratch.Get "svg" }}#github" style="width: 16px; height: 16px;"> GitHub repositories</a></li>
